# adapterfax

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
experiments/: run_validation.py  s0_plant_killgate.py
results/: s0_killgate.json  v0.1.0a1_metrics.json
scripts/: honesty_grep.sh
src/adapterfax/: __init__.py  _noclaim.py  baselines.py  cast.py  census.py  cli.py  core.py  gates.py  loader.py  model.py  report.py  rmt.py  synthetic.py  tw.py
tests/: test_cast.py  test_census.py  test_gates.py  test_loaders.py  test_perf_gram.py  test_plant_killgate.py  test_report_cli.py  test_rmt.py
